- Replaced "software development (SD)" with "application development (AP)". - Expanded the technology stack to include Entity Framework. - Updated location details from a shorthand version to a precise and consistent version. - Reorganized the skills section.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a href="https://scholar.google.com/citations?user=b5V6mWIAAAAJ&hl=en" target="_blank" title="Google Scholar Profile"><i class="fab fa-google-scholar fa-fw w3-margin-right w3-large custom-text-color"></i></a>
                 <a href="https://github.com/burakbastem/" target="_blank" title="GitHub Profile"><i class="fab fa-github fa-fw w3-margin-right w3-large custom-text-color"></i></a>
               </p>
-              <p class="w3-small w3-text-grey">Last updated: February 4, 2024</p>
+              <p class="w3-small w3-text-grey">Last updated: February 9, 2025</p>
             </div>
           </div>
         </div>
@@ -82,7 +82,7 @@
           <div class="w3-container w3-card-4 w3-white w3-text-dark-grey w3-margin-bottom">
             <h2 class="w3-padding-16 custom-text-color"><i class="fa fa-user fa-fw w3-margin-right"></i>Bio</h2>
             <div class="w3-container">
-              Burak Bastem is a software engineer specialized in software development (SD), machine learning (ML) and
+              Burak Bastem is a software engineer specialized in application development (AP), machine learning (ML) and
                high performance computing (HPC). He studied, applied and developed state-of-the-art ML solutions and 
                pipelines for fraud detection, a challenging problem due to its highly unbalanced nature. His experience 
                in HPC involved developing GPU and CPU runtime libraries, optimizing multi-process communication and 
@@ -101,7 +101,7 @@
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>November 2023 - present</h6>
               <h6><i class="fas fa-building w3-margin-right custom-text-color"></i>Imperium</h6>
               <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>Turkiye</h7>
-              <h7><i class="fas fa-cubes w3-margin-right custom-text-color"></i>C#,JavaScript, .NET, React, React Native</h7>            
+              <h7><i class="fas fa-cubes w3-margin-right custom-text-color"></i>C#, JavaScript, .NET, Entity Framework, React, React Native</h7>            
               <ul style="list-style-type: square">
                 <li>Providing software for construction project management.</li>
               </ul>
@@ -111,7 +111,7 @@
               <h5 class="w3-show-inline-block"><b>Senior Software Engineer</b></h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>April 2022 - October 2023</h6>
               <h6><i class="fas fa-building w3-margin-right custom-text-color"></i>ASML via Luxoft</h6>
-              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>Eindhoven, NL</h7>
+              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>Eindhoven, Netherlands</h7>
               <h7><i class="fas fa-cubes w3-margin-right custom-text-color"></i>Python, Data Definition Format (DDF), MATLAB, Linux</h7>            
               <ul style="list-style-type: square">
                 <li>Developed and integrated CPD (calibration-performance-diagnostic) tests for EXE5000 POB (projection optic box).</li>
@@ -122,7 +122,7 @@
               <h5 class="w3-show-inline-block"><b>Senior Software Engineer</b></h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>February 2022 - April 2022</h6>
               <h6><i class="fas fa-building w3-margin-right custom-text-color"></i>Blue Cloud</h6>
-              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>US - remote</h7>
+              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>United States - remote</h7>
               <h7><i class="fas fa-cubes w3-margin-right custom-text-color"></i>ML, Python</h7>
               <ul style="list-style-type: square">
                 <li>Started a POC for JLL to predict whether work orders would be completed on time with machine learning.</li>
@@ -185,7 +185,7 @@
               <h5 class="w3-show-inline-block"><b>Research Assistant</b></h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>July - Sept 2016</h6>
               <h6><i class="fas fa-building w3-margin-right custom-text-color"></i>Lawrence Berkeley National Laboratory</h6>
-              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>Berkey, CA, US</h7>
+              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>Berkey, California, United States</h7>
               <h7><i class="fas fa-cubes w3-margin-right custom-text-color"></i>HPC, Parallel Programming, GPU Programming, C++, CUDA, OpenACC, Linux</h7>
               <ul style="list-style-type: square">
                 <li>Studied existing GPU execution models and SMC implemented with AMReX, an AMR framework from Berkeley Lab.</li>
@@ -423,11 +423,13 @@
               <hr>
             </div>
             <div class="w3-container w3-center">
-              <p class="w3-margin  w3-show-inline-block">New</p>
+              <p class="w3-margin  w3-show-inline-block">Current</p>
               <br>
               <h5 class="w3-tag custom-color">C#</h5>
               <h5 class="w3-tag custom-color">JavaScript</h5>
+              <br>
               <h5 class="w3-tag custom-color">.NET</h5>
+              <h5 class="w3-tag custom-color">Entity Framework</h5>
               <h5 class="w3-tag custom-color">React</h5>
               <h5 class="w3-tag custom-color">React Native</h5>
               <hr>
@@ -464,11 +466,12 @@
               <br>
               <h5 class="w3-tag custom-color">HTML</h5>
               <h5 class="w3-tag custom-color">CSS</h5>
-              <h5 class="w3-tag custom-color">PHP</h5>
               <h5 class="w3-tag custom-color">Julia</h5>
               <h5 class="w3-tag custom-color">C</h5>
-              <h5 class="w3-tag custom-color">Objective-C</h5>
               <h5 class="w3-tag custom-color">MATLAB</h5>
+              <h5 class="w3-tag custom-color">PHP</h5>
+              <h5 class="w3-tag custom-color">Objective-C</h5>
+              <h5 class="w3-tag custom-color">Fortran</h5>
               <br>
               <h5 class="w3-tag custom-color">OpenCV</h5>
               <h5 class="w3-tag custom-color">OpenGL</h5>
@@ -487,7 +490,7 @@
     </div>
     <!-- End Page Container -->
     <footer class="w3-container w3-margin w3-center w3-small w3-text-grey">
-      <b>&copy; 2017 - 2024 Burak Bastem</b>
+      <b>&copy; 2017 - 2025 Burak Bastem</b>
       <br>
       <b>CSS Framework: </b> Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
       <b>Font: </b> &copy; 2011 Google Inc.
