Removed special characters to standardize the location name.

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <h5 class="w3-show-inline-block"><b>Senior R&D Engineer</b></h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>August 2020 - February 2022</h6>
               <h6><i class="fas fa-building w3-margin-right custom-text-color"></i>Yapı Kredi Teknoloji - Applied Data Science Team</h6>
-              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>İstanbul, Turkiye</h7>
+              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>Istanbul, Turkiye</h7>
               <h7><i class="fas fa-cubes w3-margin-right custom-text-color"></i>ML, Fraud Detection, Big Data, Parallel Programming, Computer Vision, Python, Java, SQL, Docker, MongoDB, Redis, Hive, Spark, Pandas, scikit-learn, Linux</h7>
               <ul style="list-style-type: square">
                 <li>Worked on fraud focused machine learning projects: cross-channel fraud detection and employee fraud detection. Due to difficulty of the problem, projects were mainly research-focused and enriched with academic collaborations from respectable universities. The projects also involved HPC and big data solutions because of their data size.</li>
@@ -146,7 +146,7 @@
               <h5 class="w3-show-inline-block"><b>Expert R&D Engineer</b></h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>July 2018 - August 2020</h6>
               <h6><i class="fas fa-building w3-margin-right custom-text-color"></i>Yapı Kredi Teknoloji - Applied Data Science Team</h6>
-              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>İstanbul, Turkiye</h7>
+              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>Istanbul, Turkiye</h7>
               <h7><i class="fas fa-cubes w3-margin-right custom-text-color"></i>ML, Fraud Detection, Python, Java, SQL, Redis, Pandas, scikit-learn, TensorFlow, Linux</h7>
                 <ul style="list-style-type: square">
                 <li>Developed machine learning models for credit card fraud detection which involves providing solutions for extremely unbalanced class ratio and concept drift.</li>
@@ -160,7 +160,7 @@
               <h5 class="w3-show-inline-block"><b>Research Assistant</b></h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>June 2015 - April 2019</h6>
               <h6><i class="fas fa-building w3-margin-right custom-text-color"></i>Koç University Parcorelab</h6>
-              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>İstanbul, Turkiye</h7>
+              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>Istanbul, Turkiye</h7>
               <h7><i class="fas fa-cubes w3-margin-right custom-text-color"></i>HPC, Parallel Programming, GPU Programming, C++, CUDA, OpenACC, MPI, OpenMP, Pthreads, Linux</h7>
               <ul style="list-style-type: square">
                 <li>Implemented TiDA-C++, tiling based multi-threaded programming model to increase cache performance with data locality and manage parallelism. TiDA achieves up to 2.10x speedup over OpenMP and resulted in publication at ISC’16.</li>
@@ -174,7 +174,7 @@
               <h5 class="w3-show-inline-block"><b>Teaching Assistant</b></h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Sept 2016 - July 2018</h6>
               <h6><i class="fas fa-building w3-margin-right custom-text-color"></i>Koç University</h6>
-              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>İstanbul, Turkiye</h7>
+              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>Istanbul, Turkiye</h7>
               <ul style="list-style-type: square">
                 <li>Assisted in teaching, supervision and assessment of Computer Architecture, Operating Systems and Parallel Programming courses.</li>
                 <li>Received Teaching Assistant Training Certificate.</li>
@@ -198,7 +198,7 @@
               <h5 class="w3-show-inline-block"><b>Software Engineering Intern</b></h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>August 2015</h6>
               <h6><i class="fas fa-building w3-margin-right custom-text-color"></i>Vestel R&D</h6>
-              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>İstanbul, Turkiye</h7>
+              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>Istanbul, Turkiye</h7>
               <h7><i class="fas fa-cubes w3-margin-right custom-text-color"></i>Java, Android</h7>
               <ul style="list-style-type: square">
                 <li>Developed proof-of-concept applications for Android platform.</li>
@@ -209,7 +209,7 @@
               <h5 class="w3-show-inline-block"><b>Software Engineering Intern</b></h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>June - August 2014</h6>
               <h6><i class="fas fa-building w3-margin-right custom-text-color"></i>Netaş</h6>
-              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>İstanbul, Turkiye</h7>
+              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>Istanbul, Turkiye</h7>
               <h7><i class="fas fa-cubes w3-margin-right custom-text-color"></i>Java</h7>
               <ul style="list-style-type: square">
                 <li>Analyzed and configured static code analysis tools to be integrated to continuous delivery project.</li>
@@ -226,7 +226,7 @@
               <h5 class="w3-show-inline-block"><b>Master of Science, Computer Science and Engineering</b></h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Sept 2016 - Apr 2019</h6>
               <h6><i class="fas fa-university w3-margin-right custom-text-color"></i>Koç University</h6>
-              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>İstanbul, Turkiye</h7>
+              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>Istanbul, Turkiye</h7>
               <p>
                 Thesis: Tiling-Based Programming Model for GPU Clusters Targeting Structured Grids
                 <br>
@@ -238,7 +238,7 @@
               <h5 class="w3-show-inline-block"><b>Bachelor of Science, Computer Engineering</b></h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Feb 2012 - Feb 2016</h6>
               <h6><i class="fas fa-university w3-margin-right custom-text-color"></i>Koç University</h6>
-              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>İstanbul, Turkiye</h7>
+              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>Istanbul, Turkiye</h7>
               <p>GPA: 3.18 / 4.00</p>
               <hr>
             </div>
@@ -246,7 +246,7 @@
               <h5 class="w3-show-inline-block"><b>Bachelor of Science, Industrial Engineering</b> - Double Major</h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Feb 2015 - June 2016</h6>
               <h6><i class="fas fa-university w3-margin-right custom-text-color"></i>Koç University</h6>
-              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>İstanbul, Turkiye</h7>
+              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>Istanbul, Turkiye</h7>
               <p>GPA: 3.18 / 4.00</p>
               <hr>
             </div>
@@ -254,7 +254,7 @@
               <h5 class="w3-show-inline-block"><b>Track Certificate Program, Software Engineering</b></h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Feb 2014 - Feb 2016</h6>
               <h6><i class="fas fa-university w3-margin-right custom-text-color"></i>Koç University</h6>
-              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>İstanbul, Turkiye</h7>
+              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>Istanbul, Turkiye</h7>
               <p>GPA: 3.54 / 4.00</p>
               <hr>
             </div>
@@ -262,7 +262,7 @@
               <h5 class="w3-show-inline-block"><b>English Language Program</b></h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Sept 2010 - Jan 2012</h6>
               <h6><i class="fas fa-university w3-margin-right custom-text-color"></i>Koç University</h6>
-              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>İstanbul, Turkiye</h7>              
+              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>Istanbul, Turkiye</h7>              
               <br>
             </div>
           </div>
