Fixed the misspelling of Berkeley.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a href="https://scholar.google.com/citations?user=b5V6mWIAAAAJ&hl=en" target="_blank" title="Google Scholar Profile"><i class="fab fa-google-scholar fa-fw w3-margin-right w3-large custom-text-color"></i></a>
                 <a href="https://github.com/burakbastem/" target="_blank" title="GitHub Profile"><i class="fab fa-github fa-fw w3-margin-right w3-large custom-text-color"></i></a>
               </p>
-              <p class="w3-small w3-text-grey">Last updated: February 9, 2025</p>
+              <p class="w3-small w3-text-grey">Last updated: February 19, 2025</p>
             </div>
           </div>
         </div>
@@ -185,7 +185,7 @@
               <h5 class="w3-show-inline-block"><b>Research Assistant</b></h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>July - Sept 2016</h6>
               <h6><i class="fas fa-building w3-margin-right custom-text-color"></i>Lawrence Berkeley National Laboratory</h6>
-              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>Berkey, California, United States</h7>
+              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>Berkeley, California, United States</h7>
               <h7><i class="fas fa-cubes w3-margin-right custom-text-color"></i>HPC, Parallel Programming, GPU Programming, C++, CUDA, OpenACC, Linux</h7>
               <ul style="list-style-type: square">
                 <li>Studied existing GPU execution models and SMC implemented with AMReX, an AMR framework from Berkeley Lab.</li>
